--- a/Dynamic/package.json
+++ b/Dynamic/package.json
@@ -12,6 +12,7 @@
 		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
+		"@react-spring/parallax": "^9.7.4",
 		"@react-spring/web": "^9.7.4",
 		"gsap": "^3.12.5",
 		"react": "^18.3.1",
