--- a/Dynamic/package.json
+++ b/Dynamic/package.json
@@ -17,6 +17,7 @@
 		"gsap": "^3.12.5",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-intersection-observer": "^9.13.1",
 		"react-parallax": "^3.5.1"
 	},
 	"devDependencies": {
