--- a/Dynamic/package.json
+++ b/Dynamic/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@react-spring/parallax": "^9.7.4",
 		"@react-spring/web": "^9.7.4",
+		"animate.css": "^4.1.1",
 		"gsap": "^3.12.5",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
