--- a/Dynamic/package.json
+++ b/Dynamic/package.json
@@ -16,6 +16,7 @@
 		"@react-spring/web": "^9.7.4",
 		"animate.css": "^4.1.1",
 		"gsap": "^3.12.5",
+		"particles.js": "^2.0.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-intersection-observer": "^9.13.1",
